RESOLVED FIXED49228
REGRESSION: caret is shorter now when line-height is specified.
https://bugs.webkit.org/show_bug.cgi?id=49228
Summary REGRESSION: caret is shorter now when line-height is specified.
Dave Hyatt
Reported 2010-11-08 17:37:19 PST
This was caught by pixel tests. The caret needs to use selectionTop/Bottom now that lineTop no longer includes the leading.
Attachments
Patch (1.32 KB, patch)
2010-11-08 17:39 PST, Dave Hyatt
simon.fraser: review+
Dave Hyatt
Comment 1 2010-11-08 17:39:02 PST
Dave Hyatt
Comment 2 2010-11-08 17:41:15 PST
Fixed in r71589.
Note You need to log in before you can comment on or make changes to this bug.