https://bugs.webkit.org/show_bug.cgi?id=49228

Reviewed by Simon Fraser.

REGRESSION: caret too short when a positive line height is specified.  Now that lineTop no longer
accidentally incorporates the top leading, we need to use selectionTop/Bottom for the caret rect.

* rendering/RenderText.cpp:
(WebCore::RenderText::localCaretRect):



Canonical link: https://commits.webkit.org/62076@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71589 268f45cc-cd09-0410-ab3c-d52691b4dbfc